--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-numpy>=1.15
-cycler>=0.10.0
-python-dateutil>=2.1
-kiwisolver>=1.0.0
-pillow>=6.2
-pyparsing>=2.0.3
 setuptools
 matplotlib>=3.0.0
 pybrake>=0.4
 pyautogui
+dearpygui
+PySimpleGUI
+panda3d-kivy
+open3d
